Fix JdkObsolete Error Prone errors by using Charset overloads
The newer Error Prone shipped with rules_java 9.8.0 reports
JdkObsolete for the String-charset-name JDK APIs. Switch to the
Charset overloads (URLEncoder/URLDecoder, new String,
OutputStreamWriter, ByteArrayOutputStream.toString). Where the
charset is a StandardCharsets constant, .name()/the literal is
replaced by the constant; where it is dynamic, Charset.forName(...)
is used. Now-dead UnsupportedEncodingException try/catch blocks and
imports are removed.

Change-Id: Ie4e8025bb463da9ebe80fe70af75bf4fdc9a9c4b